airport endpoints refactoring
