# docs/openapi.yaml
@@ -4,11 +4,18 @@ info:
   title: Test title
   description: Test description
 paths:
-    /api/airport:
+    /api/airport/{records}:
         get:
             tags:
                 - Airport
             summary: Endpoint returning a list of 1000 airports.
+            parameters:
+              - in: path
+                name: records
+                schema:
+                  type: integer
+                required: false
+                description: Number of records to be returned.
             responses:
                 200:
                     description: A list of 1000 airports.
