# endpoints/airport/airport.py
@@ -1,36 +1,42 @@
-from flask import Blueprint, jsonify
+from flask import Blueprint, jsonify, Response
 from database.db import Session
 from database.tables import AirportTable, CountryTable
+from sqlalchemy.sql import or_
 
 airport = Blueprint("airport", __name__, url_prefix="/api/airport")
 
 
 @airport.get("/")
-def get_all():
+@airport.get("/<int:records>")
+def get_all(records: int = None) -> tuple[Response, int]:
     with Session() as session:
-        rows = (
-            session.query(
-                AirportTable.name,
-                AirportTable.icao,
-                AirportTable.iata,
-                AirportTable.location,
-                AirportTable.latitude,
-                AirportTable.longitude,
-            )
-            .limit(1000)
-            .all()
-        )
+        query = session.query(
+            CountryTable.short_name,
+            CountryTable.long_name,
+            AirportTable.name,
+            AirportTable.icao,
+            AirportTable.iata,
+            AirportTable.location,
+            AirportTable.latitude,
+            AirportTable.longitude,
+        ).join(CountryTable, CountryTable.id == AirportTable.country_id)
+
+        if records:
+            query = query.limit(records)
+        rows = query.all()
 
     result = jsonify([row._asdict() for row in rows])
+    return result, 200
 
-    return result
 
-
-@airport.get("/<string:country_short_name>")
-def get_airports_by_country(country_short_name: str):
+@airport.get("/country/<string:country>")
+@airport.get("/country/<string:country>/<int:records>")
+def get_airports_by_country(country: str, records: int = None) -> tuple[Response, int]:
     with Session() as session:
-        rows = (
+        query = (
             session.query(
+                CountryTable.short_name,
+                CountryTable.long_name,
                 AirportTable.name,
                 AirportTable.icao,
                 AirportTable.iata,
@@ -39,11 +45,11 @@ def get_airports_by_country(country_short_name: str):
                 AirportTable.longitude,
             )
             .join(CountryTable, CountryTable.id == AirportTable.country_id)
-            .filter(CountryTable.short_name == country_short_name)
-            .limit(1000)
-            .all()
+            .filter(or_(CountryTable.short_name.like(country), CountryTable.long_name.like(country)))
         )
+        if records:
+            query = query.limit(records)
+        rows = query.all()
 
     result = jsonify([row._asdict() for row in rows])
-
-    return result
+    return result, 200
